--- a/resume.css
+++ b/resume.css
@@ -24,3 +24,37 @@ body {
     
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
+@media (max-width:500px){
+    body{
+        font-size: 15px;
+    }
+    a{
+        font-size: 10px;
+    }
+
+}
+
+@media (min-width: 501px) and (max-width: 768px){
+    body{
+        font-size: 18px;
+    }
+    a{
+        font-size: 12px;
+    }
+
+}
+
+@media (min-width: 769px) and (max-width: 1200px){
+    body{
+        font-size: 24px;
+    }
+    a{
+        font-size: 15px;
+    }
+
+}
