--- a/forms.css
+++ b/forms.css
@@ -9,8 +9,12 @@ body{
     border: 3px darkslateblue double;
     border-radius: 10px;
     border-style: groove;
+    box-shadow: 0 0 20px white;
     margin-top: 50px;
     margin-bottom: 50px;
     padding: 30px;
     background: linear-gradient(45deg, #4065d8, white );
+    color: firebrick;
+    font-family: cursive;
 }
+
