--- a/forms.css
+++ b/forms.css
@@ -18,3 +18,14 @@ body{
     font-family: cursive;
 }
 
+input, select, textarea{
+    border: none;
+    padding: 12px;
+    border-radius:5px;
+    transition: 0.4s;
+}
+
+input:hover, select:hover, textarea:hover{
+    box-shadow: 0 0 10px blue;
+    transition: 0.4s;
+}
