--- a/emoji.css
+++ b/emoji.css
@@ -17,9 +17,9 @@ body {
     /* no row properties are needed */
     /* TODO: the height of the wrapper should be 100 viewport height units */
     display: grid;
-    grid-template-columns: 1fr repeat(3, 200px) 1fr;
+    grid-template-columns: 1fr repeat(3, 400px) 1fr;
     grid-gap: 1em;
-    grid-auto-rows: 100vh;
+    /* grid-auto-rows: 100vh; */
 }
 
 ul {
@@ -56,6 +56,7 @@ main {
 
 header ul {
     /* TODO: use flex box to horizontally line up all list items */
+    display: flex;
 }
 
 header a {
@@ -64,7 +65,7 @@ header a {
 
 header ul li:nth-of-type(2) {
     /* TODO: uncomment the next line and add a value which causes Flexbox to automatically fill in extra space on it's left side */
-    /*margin-left: ;*/
+    margin-left: auto;
     border-right: 1px solid white;
 }
 
@@ -76,6 +77,8 @@ header a:hover {
 .header-background {
     background: purple;
     /* TODO: define the grid area of this element to take up the entire first row of the .container grid  */
+    grid-row: 1/2;
+    grid-column: 1/6;
 }
 
 nav ul {
@@ -120,11 +123,12 @@ nav a:hover {
     border-radius: 10px;
     position: relative;
     /* TODO: add a property that causes a transition of the border from lightgrey to near black in .2 seconds */
+    transition: 0.2s;
 }
 
 .card:hover {
     border-color: #111;
-    transition: 0.4s;
+    transition: 0.2s;
 }
 
 .card a {
